[add] File IO operations for DetectorResult instances